# pokec-fairness-gnn

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
docs/notes/: 00-index.md  01-protocole-experimental.md  02-resultats-fairness.md  03-biais-structurel-leakage.md  04-interpretabilite-gnnexplainer.md  05-robustesse.md  06-gaps-plans-amelioration.md  07-analysis-note.md
docs/plans/: 2026-03-13-pokec-fairness-design.md  2026-03-13-pokec-fairness-implementation.md
notebooks/: fairness_findings.ipynb  main_experiment.ipynb  main_experiment_executed.ipynb  smoking_age_pipeline.ipynb  smoking_age_pipeline_executed.ipynb  ultimate_scenario.ipynb
report/: 2_pager.md  2_pager.tex  2_pager_region.md  analysis_note.md  main.tex
report-v2/: main.tex
results/metrics/: comparison_full.csv  comparison_multiseed_summary.csv  comparison_pokec_n_seed42.csv  comparison_seed21.csv  comparison_seed3.csv  comparison_seed42.csv  comparison_seed7.csv  comparison_seed99.csv  composite_smoke.csv  education_fairness.csv  fairgnn_on_region.csv  fairgnn_two_opt_gender.csv  fairgnn_two_opt_region.csv  interpretability_gnnexplainer.csv  interpretability_top_features.csv  minority_fairness_table.csv  minority_proxy_test.csv  minority_robustness.csv  results_summary.csv  tabicl_inlp_embedding.csv  (+8 more)
scripts/: _build_fairness_notebook.py  _build_smoking_age_notebook.py  _build_thin_notebook.py  _build_ultimate_notebook.py  _smoke_graph_emb_to_tabicl.py  aggregate_multi_seed.py  build_pdf.py  extract_snap_languages.py  main_experiment.py  plot_figures.py  plot_pareto.py  plot_smoking_findings.py  run_education_fairness.py  run_fairgnn_on_region.py  run_fairgnn_two_opt.py  run_interpretability.py  run_main.sh  run_minority_fairness.py  run_multi_seed.sh  run_tabicl_inlp_embedding.py  run_tabicl_inlp_reinjection.py  run_tabicl_inlp_reinjection_composite.py  run_toolbox_smoking_age.py  tabicl_embedding_inlp_smoke.py  target_sweep.py
tests/: test_calibration.py  test_data.py  test_fairgnn_grl.py  test_fairness.py  test_feature_importance.py  test_inlp.py  test_interpretability.py  test_minority_fairness.py  test_models.py  test_no_pandas_no_loops.py  test_postprocess.py  test_reweighting.py  test_robustness.py  test_tabicl_baseline.py  test_tabicl_inlp_embedding.py
(+23 files in other folders)
