[project]
name = "pokec-fairness-gnn"
version = "0.1.0"
description = "Fairness, interpretability and robustness analysis on Pokec-z with GNNs"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "scikit-learn>=1.3.0",
    "polars>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "threadpoolctl>=3.0.0",
    "tabicl>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: fast smoke tests that must pass before heavy runs",
    "gpu: tests that require CUDA (skipped if not available)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade,
# SIM: simplify, PD: pandas-vet (BANS pandas patterns — non-negotiable)
select = ["E", "W", "F", "I", "B", "UP", "SIM", "PD"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument default (common in torch)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "B"]
"notebooks/*" = ["E", "F", "I", "B", "UP", "SIM", "PD"]
